// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkeletonLoading aria-live behavior announceLoadedStatus - allows turning off live announcements 1`] = `
<div
  aria-busy="false"
  data-test-subj="euiSkeletonLoadingAriaWrapper"
>
  <span
    data-test-subj="loaded"
  />
</div>
`;

exports[`EuiSkeletonLoading aria-live behavior announceLoadingStatus - allows enabling live announcements 1`] = `
<div
  aria-busy="true"
  data-test-subj="euiSkeletonLoadingAriaWrapper"
>
  <div
    class="emotion-euiScreenReaderOnly"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    >
      Loading Sample user data
    </div>
    <div
      aria-atomic="true"
      aria-hidden="true"
      aria-live="off"
      role="status"
    />
  </div>
  <span
    aria-label="Loading Sample user data"
    data-test-subj="loading"
    role="progressbar"
  />
</div>
`;

exports[`EuiSkeletonLoading aria-live behavior ariaLiveProps 1`] = `
<div
  aria-busy="false"
  data-test-subj="euiSkeletonLoadingAriaWrapper"
>
  <div
    class="emotion-euiScreenReaderOnly"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="alert"
    >
      Loaded Sample user data
    </div>
    <div
      aria-atomic="true"
      aria-hidden="true"
      aria-live="off"
      role="alert"
    />
  </div>
  <span
    data-test-subj="loaded"
  />
</div>
`;

exports[`EuiSkeletonLoading renders \`loadedContent\` when \`isLoading\` is false 1`] = `
<div
  aria-busy="false"
  data-test-subj="euiSkeletonLoadingAriaWrapper"
>
  <div
    class="emotion-euiScreenReaderOnly"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    >
      Loaded Sample user data
    </div>
    <div
      aria-atomic="true"
      aria-hidden="true"
      aria-live="off"
      role="status"
    />
  </div>
  <span
    data-test-subj="loaded"
  />
</div>
`;

exports[`EuiSkeletonLoading renders \`loadingContent\` when \`isLoading\` is true 1`] = `
<div
  aria-busy="true"
  data-test-subj="euiSkeletonLoadingAriaWrapper"
>
  <span
    aria-label="Loading Sample user data"
    data-test-subj="loading"
    role="progressbar"
  />
</div>
`;
